# multi-tool-llm

./: README.md  pyproject.toml
eval/: run_eval.py
src/multi_tool_llm/: cli.py
src/multi_tool_llm/tools/: code_exec.py
tests/: test_agent.py  test_calculator.py  test_code_exec.py
