[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_tool_llm"
version = "0.1.0"
description = "Multi-tool LLM agent with search, calculator, and code execution"
requires-python = ">=3.10"
authors = [{ name = "Nilay Sundarkar" }]
dependencies = [
    "anthropic>=0.39.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
multi-tool-llm = "multi_tool_llm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
